[gd_scene load_steps=3 format=3 uid="uid://cb1n262lfmlp8"]

[ext_resource type="Theme" uid="uid://dndk60sn664bq" path="res://puzzle/ui/themes/main_theme.tres" id="1_8vgpe"]
[ext_resource type="Script" uid="uid://c2p1riripontu" path="res://menus/pause/pause_menu.gd" id="2_n5dtg"]

[node name="PauseMenu" type="PopupPanel"]
oversampling_override = 1.0
initial_position = 2
size = Vector2i(280, 196)
visible = true
theme = ExtResource("1_8vgpe")
script = ExtResource("2_n5dtg")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 280.0
offset_bottom = 196.0
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="ResumeButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8vgpe")
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 18
text = "Resume"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(170, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8vgpe")
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 18
text = "Settings"

[node name="LevelSelectButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(220, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8vgpe")
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 18
text = "Back to level select"

[node name="MainMenuButton" type="Button" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(170, 40)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("1_8vgpe")
theme_type_variation = &"MainMenuButton"
theme_override_font_sizes/font_size = 18
text = "Back to menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="hide"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_return_button_4_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/LevelSelectButton" to="." method="_on_return_button_7_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_return_button_5_pressed"]
